[gd_scene load_steps=2 format=4]

[ext_resource path="res://scenes/Connecting.gd" type="Script" id=1]

[node name="Connecting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
text = ""

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
alignment = 1

[node name="Retry" type="Button" parent="Panel/VBoxContainer/Buttons"]
text = ""
visible = false

[node name="Cancel" type="Button" parent="Panel/VBoxContainer/Buttons"]
text = ""

[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Cancel" to="." method="_on_cancel_pressed"]
